# Rb-5S-6S-analysis

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
PDF_papers/: README.md
data_raw/: MANIFEST.csv
data_recovered/: CLOCK.csv  README.md  RECOVERED_MANIFEST.csv
docs/: APPARATUS.md  BIG_PICTURE.md  DATA.md  FUTURE_TRANSITIONS_titsapph.md  LITERATURE.md  LITERATURE_INDEX.md  PAPER1_SKELETON.md  PAPER2_SKELETON.md  PAPERS_PORTFOLIO.md  PLAN.md  PREREGISTRATION_RESULTS.md  PREREGISTRATION_timestamps.md  RESULTS.md  STYLE.md  THEORY_NOTE.md  literature_food_for_thought.md  methods.md  paper1_draft_II_two_epoch.md  paper1_draft_VI-A_beta.md  paper1_draft_VI-CD_power_stark.md  paper1_draft_V_analysis.md  references.bib
rb5s6s/: __init__.py  _compat.py  amplitudes.py  beta.py  config.py  constants.py  coverage.py  density.py  fitutil.py  fringe_tail.py  global_fit.py  identifiability.py  ingest.py  lever_crosscheck.py  linefit.py  lineshape.py  model_ladder.py  modelform.py  noise.py  polarizability.py  qc.py  ruler.py  sharing_bic.py  stark.py  transit_mc.py
results/: README.md  amplitude_ratios.csv  amplitude_trapping.csv  beta_self.csv  beta_self_probe.csv  coverage.csv  fringe_tail.csv  global_fit.csv  identifiability.csv  identifiability_profile.csv  laser_epoch.csv  lever_crosscheck.csv  linefit_conditions.csv  model_ladder.csv  modelform.csv  noise_model.csv  polarizability.csv  power_sweep.csv  ruler_blocks.csv  ruler_campaign.csv  ruler_nlmap.csv  ruler_traces.csv  sharing_bic.csv  sigma_laser_sharing.csv  stark_sweep.csv  transit_mc.csv
(+161 files in other folders)
