[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rb5s6s"
version = "1.1.0"
description = "Physics-based forward-model analysis of the Rb 5S->6S two-photon lineshape (2025 OIST archival campaign)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Michelangelo Dondi" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.urls]
Repository = "https://github.com/MichelangeloDondi/Rb-5S-6S-analysis"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["rb5s6s"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: high-statistics closure test, skipped by default; run with --runslow (CI always does)",
]
